--- a/README
+++ b/README
@@ -17,7 +17,7 @@
 #
 # Sample Usage:
 #   fail2ban::email { "/etc/fail2ban/jail.conf":
-#      email     => "fail2ban@${domain}",
+#      email     => "fail2ban@${::domain}",
 #      whitelist => [
 #         "127.0.0.1",
 #         "192.168.122.0/24"
