Add support for hiera

--- a/README
+++ b/README
@@ -17,9 +17,6 @@
 #
 # Sample Usage:
 #   fail2ban::email { "/etc/fail2ban/jail.conf":
-#      email     => "fail2ban@${::domain}",
-#      whitelist => [
-#         "127.0.0.1",
-#         "192.168.122.0/24"
-#      ],
+#      email     => hiera('email'),
+#      whitelist => hiera_array('whitelist'),
 #   }
